--- a/web.config
+++ b/web.config
@@ -7,7 +7,8 @@
 
 <configuration>
     <system.web>
-      <compilation debug="false" strict="false" explicit="true" targetFramework="4.0" />
+      <compilation debug="true" strict="false" explicit="true" targetFramework="4.5.1" />
+      <httpRuntime targetFramework="4.5.1" />
     </system.web>
 
 </configuration>
